--- a/BMS_LV.ioc
+++ b/BMS_LV.ioc
@@ -27,27 +27,34 @@ Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PC6
-Mcu.Pin11=PC7
-Mcu.Pin12=PC8
-Mcu.Pin13=PC9
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
-Mcu.Pin2=PC1
-Mcu.Pin20=PB3
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin3=PC2
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB10
-Mcu.Pin9=PB15
-Mcu.PinsNb=22
+Mcu.Pin10=PC4
+Mcu.Pin11=PC5
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB2
+Mcu.Pin15=PB10
+Mcu.Pin16=PB15
+Mcu.Pin17=PC6
+Mcu.Pin18=PC7
+Mcu.Pin19=PC8
+Mcu.Pin2=PC0
+Mcu.Pin20=PC9
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PB3
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin3=PC1
+Mcu.Pin4=PC2
+Mcu.Pin5=PC3
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -65,14 +72,18 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=ADC1_IN0_ISENS
+PA0-WKUP.GPIO_Label=CAS50NP_OUT_ADC_IN
 PA0-WKUP.Signal=ADCx_IN0
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=USART1_RX_DBG
+PA10.GPIO_Label=DBG_TX_USART_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=SN65HVD23x_R_CAN_TX
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN1_RX
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=SN65HVD23x_D_CAN_TX
 PA12.Mode=CAN_Activate
 PA12.Signal=CAN1_TX
 PA13.Mode=Trace_Asynchronous_SW
@@ -80,55 +91,83 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=SP1_SCK_L9963E
+PA5.GPIO_Label=L9963T_SCK_SPI_SCK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=SPI1_MISO_L9963E
+PA6.GPIO_Label=L9963T_SDO_SPI_MISO
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=SPI1_MOSI_L9963E
+PA7.GPIO_Label=L9963T_SDI_SPI_MOSI
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=USART1_TX_DBG
+PA9.GPIO_Label=DBG_RX_USART_TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=L9963T_ISOFREQ_GPIO_OUT
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=L9963T_BNE_GPIO_IN
+PB1.Locked=true
+PB1.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=SPI2_SCK_EEPROM
+PB10.GPIO_Label=M95256_C_SPI_SCK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=GPIO_LED4
+PB15.GPIO_Label=LED_STAT3_GPIO_OUT
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=L9963T_TXEN_GPIO_OUT
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=M95256_NS_GPIO_OUT
+PC0.Locked=true
+PC0.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=SPI2_MOSI_EEPROM
+PC1.GPIO_Label=M95256_D_SPI_MOSI
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
 PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=SPI2_MISO_EEPROM
+PC2.GPIO_Label=M95256_Q_SPI_MISO
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=M95256_NW_GPIO_OUT
+PC3.Locked=true
+PC3.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=L9963T_NCS_GPIO_OUT
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=L9963T_DIS_GPIO_INOUT
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=GPIO_LED3
+PC6.GPIO_Label=LED_STAT2_GPIO_OUT
 PC6.Locked=true
 PC6.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=GPIO_LED2
+PC7.GPIO_Label=LED_STAT1_GPIO_OUT
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=GPIO_LED1
+PC8.GPIO_Label=LED_WARN_GPIO_OUT
 PC8.Locked=true
 PC8.Signal=GPIO_Output
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=GPIO_LED_ERR
+PC9.GPIO_Label=LED_ERR_GPIO_OUT
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
