feat: added LV_CMD port

--- a/BMS_LV.ioc
+++ b/BMS_LV.ioc
@@ -5,9 +5,9 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-CAN1.CalculateBaudRate=333333
-CAN1.CalculateTimeBit=3000
-CAN1.CalculateTimeQuantum=1000.0
+CAN1.CalculateBaudRate=520833
+CAN1.CalculateTimeBit=1920
+CAN1.CalculateTimeQuantum=640.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -46,7 +46,8 @@ Mcu.Pin24=PA12
 Mcu.Pin25=PA13
 Mcu.Pin26=PA14
 Mcu.Pin27=PB3
-Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin28=PB5
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PC1
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
@@ -54,7 +55,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -130,6 +131,10 @@ PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LV_CMD_GPIO_OUT
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=M95256_NS_GPIO_OUT
 PC0.Locked=true
@@ -199,40 +204,59 @@ ProjectManager.ProjectFileName=BMS_LV.ioc
 ProjectManager.ProjectName=BMS_LV
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM V8.50
+ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
+RCC.AHBFreq_Value=25000000
+RCC.APB1Freq_Value=25000000
+RCC.APB1TimFreq_Value=25000000
+RCC.APB2Freq_Value=25000000
+RCC.APB2TimFreq_Value=25000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=16000000
+RCC.CortexFreq_Value=25000000
+RCC.FCLKCortexFreq_Value=25000000
+RCC.FMPI2C1Freq_Value=25000000
 RCC.FamilyName=M
-RCC.IPParameters=CECFreq_Value,CortexFreq_Value,FamilyName,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLI2SPCLKFreq_Value=96000000
-RCC.PLLI2SQCLKFreq_Value=96000000
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=96000000
-RCC.PLLRCLKFreq_Value=96000000
-RCC.PLLSAIPCLKFreq_Value=96000000
-RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.SAIAFreq_Value=96000000
-RCC.SAIBFreq_Value=96000000
-RCC.SDIOFreq_Value=96000000
-RCC.USBFreq_Value=96000000
-RCC.VCOI2SInputFreq_Value=1000000
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
-RCC.VCOSAIInputFreq_Value=1000000
-RCC.VCOSAIOutputFreq_Value=192000000
+RCC.HCLKFreq_Value=25000000
+RCC.HSE_VALUE=25000000
+RCC.I2S1Freq_Value=150000000
+RCC.I2S2Freq_Value=150000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.MCO2PinFreq_Value=25000000
+RCC.PLLCLKFreq_Value=150000000
+RCC.PLLI2SPCLKFreq_Value=150000000
+RCC.PLLI2SQCLKFreq_Value=150000000
+RCC.PLLI2SRCLKFreq_Value=150000000
+RCC.PLLI2SoutputFreq_Value=150000000
+RCC.PLLQCLKFreq_Value=150000000
+RCC.PLLRCLKFreq_Value=150000000
+RCC.PLLSAIPCLKFreq_Value=150000000
+RCC.PLLSAIQCLKFreq_Value=150000000
+RCC.PLLSAIoutputFreq_Value=150000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PWRFreq_Value=25000000
+RCC.SAIAFreq_Value=150000000
+RCC.SAIBFreq_Value=150000000
+RCC.SDIOFreq_Value=150000000
+RCC.SPDIFRXFreq_Value=150000000
+RCC.SYSCLKFreq_VALUE=25000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
+RCC.USBFreq_Value=150000000
+RCC.VCOI2SInputFreq_Value=1562500
+RCC.VCOI2SOutputFreq_Value=300000000
+RCC.VCOInputFreq_Value=1562500
+RCC.VCOOutputFreq_Value=300000000
+RCC.VCOSAIInputFreq_Value=1562500
+RCC.VCOSAIOutputFreq_Value=300000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SPI1.CalculateBaudRate=8.0 MBits/s
+SPI1.CalculateBaudRate=12.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=8.0 MBits/s
+SPI2.CalculateBaudRate=12.5 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
