feat: NTC adcs pins added

--- a/BMS_LV.ioc
+++ b/BMS_LV.ioc
@@ -1,10 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-2\#ChannelRegularConversion=1
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 CAN1.CalculateBaudRate=520833
 CAN1.CalculateTimeBit=1920
 CAN1.CalculateTimeQuantum=640.0
@@ -15,47 +20,53 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=CAN1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP1=ADC2
+Mcu.IP2=CAN1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PC4
-Mcu.Pin11=PC5
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB2
-Mcu.Pin15=PB10
-Mcu.Pin16=PB15
-Mcu.Pin17=PC6
-Mcu.Pin18=PC7
-Mcu.Pin19=PC8
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PB2
+Mcu.Pin19=PB10
 Mcu.Pin2=PC0
-Mcu.Pin20=PC9
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PB3
-Mcu.Pin28=PB5
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PC6
+Mcu.Pin23=PC7
+Mcu.Pin24=PC8
+Mcu.Pin25=PC9
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 Mcu.Pin3=PC1
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PB3
+Mcu.Pin33=PB5
+Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=30
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -73,8 +84,13 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=CAS50NP_OUT_ADC_IN
+PA0-WKUP.GPIO_Label=NTCx_ADC2_IN
+PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=NTCx_ADC2_IN
+PA1.Locked=true
+PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=T_VCP_RX_USART_RX
 PA10.Mode=Asynchronous
@@ -91,6 +107,18 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=NTCx_ADC2_IN
+PA2.Locked=true
+PA2.Signal=ADCx_IN2
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=NTCx_ADC2_IN
+PA3.Locked=true
+PA3.Signal=ADCx_IN3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=NTCx_ADC2_IN
+PA4.Locked=true
+PA4.Signal=ADCx_IN4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=L9963T_SCK_SPI_SCK
 PA5.Mode=Full_Duplex_Master
@@ -121,6 +149,10 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=M95256_C_SPI_SCK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=M95256_Q_SPI_MISO
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=LED_STAT3_GPIO_OUT
 PB15.Locked=true
@@ -144,9 +176,8 @@ PC1.GPIO_Label=M95256_D_SPI_MOSI
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
 PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=M95256_Q_SPI_MISO
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=SPI2_MISO
+PC2.GPIO_Label=CAS50NP_OUT_ADC_IN
+PC2.Signal=ADCx_IN12
 PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=M95256_NW_GPIO_OUT
 PC3.Locked=true
@@ -249,8 +280,18 @@ RCC.VCOInputFreq_Value=1562500
 RCC.VCOOutputFreq_Value=300000000
 RCC.VCOSAIInputFreq_Value=1562500
 RCC.VCOSAIOutputFreq_Value=300000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.0=ADC2_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC2_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN12.0=ADC1_IN12,IN12
+SH.ADCx_IN12.ConfNb=1
+SH.ADCx_IN2.0=ADC2_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC2_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
+SH.ADCx_IN4.0=ADC2_IN4,IN4
+SH.ADCx_IN4.ConfNb=1
 SPI1.CalculateBaudRate=12.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
