--- a/BMS_LV.ioc
+++ b/BMS_LV.ioc
@@ -2,7 +2,7 @@
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_TRGO
-ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISINGFALLING
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ExternalTrigConv,ExternalTrigConvEdge
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
@@ -28,6 +28,7 @@ Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
+Mcu.IP10=USART1
 Mcu.IP2=CAN1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -35,8 +36,8 @@ Mcu.IP5=SPI1
 Mcu.IP6=SPI2
 Mcu.IP7=SYS
 Mcu.IP8=TIM2
-Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IP9=TIM6
+Mcu.IPNb=11
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -65,10 +66,10 @@ Mcu.Pin29=PA12
 Mcu.Pin3=PC1
 Mcu.Pin30=PA13
 Mcu.Pin31=PA14
-Mcu.Pin32=PB3
-Mcu.Pin33=PB5
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin32=PB5
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
@@ -92,7 +93,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=NTCx_ADC2_IN
@@ -114,9 +115,9 @@ PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=SN65HVD23x_D_CAN_TX
 PA12.Mode=CAN_Activate
 PA12.Signal=CAN1_TX
-PA13.Mode=Trace_Asynchronous_SW
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Trace_Asynchronous_SW
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=NTCx_ADC2_IN
@@ -172,8 +173,6 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=L9963T_TXEN_GPIO_OUT
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB3.Mode=Trace_Asynchronous_SW
-PB3.Signal=SYS_JTDO-SWO
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LV_CMD_GPIO_OUT
 PB5.Locked=true
@@ -253,7 +252,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -328,10 +327,15 @@ TIM2.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM2.Period=89999
 TIM2.Prescaler=9
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=8999
+TIM6.Prescaler=9
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
