--- a/BMS_LV.ioc
+++ b/BMS_LV.ioc
@@ -6,14 +6,31 @@ ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISINGFALLING
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ExternalTrigConv,ExternalTrigConvEdge
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.master=1
-ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC2.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC2.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.EOCSelection=ADC_EOC_SEQ_CONV
+ADC2.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_TRGO
+ADC2.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISINGFALLING
+ADC2.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EOCSelection,DMAContinuousRequests
+ADC2.NbrOfConversion=5
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-2\#ChannelRegularConversion=1
-ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC2.Rank-3\#ChannelRegularConversion=2
+ADC2.Rank-4\#ChannelRegularConversion=3
+ADC2.Rank-5\#ChannelRegularConversion=4
+ADC2.Rank-6\#ChannelRegularConversion=5
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC2.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC2.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -21,6 +38,18 @@ CAN1.CalculateBaudRate=937500
 CAN1.CalculateTimeBit=1066
 CAN1.CalculateTimeQuantum=355.55555555555554
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC2.0.Instance=DMA2_Stream2
+Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.0.Mode=DMA_CIRCULAR
+Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC2
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -28,16 +57,17 @@ Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=USART1
+Mcu.IP10=TIM6
+Mcu.IP11=USART1
 Mcu.IP2=CAN1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SPI2
-Mcu.IP7=SYS
-Mcu.IP8=TIM2
-Mcu.IP9=TIM6
-Mcu.IPNb=11
+Mcu.IP3=DMA
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SPI2
+Mcu.IP8=SYS
+Mcu.IP9=TIM2
+Mcu.IPNb=12
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -84,6 +114,7 @@ MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -96,11 +127,11 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=NTCx_ADC2_IN
+PA0-WKUP.GPIO_Label=NTC8_ADC2_IN
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=NTCx_ADC2_IN
+PA1.GPIO_Label=NTC9_ADC2_IN
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Label
@@ -120,15 +151,15 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=NTCx_ADC2_IN
+PA2.GPIO_Label=NTC10_ADC2_IN
 PA2.Locked=true
 PA2.Signal=ADCx_IN2
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=NTCx_ADC2_IN
+PA3.GPIO_Label=NTC11_ADC2_IN
 PA3.Locked=true
 PA3.Signal=ADCx_IN3
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=NTCx_ADC2_IN
+PA4.GPIO_Label=NTC12_ADC2_IN
 PA4.Locked=true
 PA4.Signal=ADCx_IN4
 PA5.GPIOParameters=GPIO_Label
@@ -252,7 +283,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
