--- a/BMS_LV.ioc
+++ b/BMS_LV.ioc
@@ -58,7 +58,8 @@ Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 Mcu.IP10=TIM6
-Mcu.IP11=USART1
+Mcu.IP11=TIM7
+Mcu.IP12=USART1
 Mcu.IP2=CAN1
 Mcu.IP3=DMA
 Mcu.IP4=NVIC
@@ -67,7 +68,7 @@ Mcu.IP6=SPI1
 Mcu.IP7=SPI2
 Mcu.IP8=SYS
 Mcu.IP9=TIM2
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -100,18 +101,19 @@ Mcu.Pin32=PB5
 Mcu.Pin33=VP_SYS_VS_Systick
 Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=6.8.0
-MxDb.Version=DB.6.0.80
+MxCube.Version=6.8.1
+MxDb.Version=DB.6.0.81
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -125,6 +127,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=NTC8_ADC2_IN
@@ -196,9 +199,10 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=M95256_Q_SPI_MISO
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=PinState,GPIO_Label
 PB15.GPIO_Label=LED_ERR_GPIO_OUT
 PB15.Locked=true
+PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=L9963T_TXEN_GPIO_OUT
@@ -234,21 +238,25 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=L9963T_DIS_GPIO_INOUT
 PC5.Locked=true
 PC5.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=LED_STAT1_GPIO_OUT
+PC6.GPIOParameters=PinState,GPIO_Label
+PC6.GPIO_Label=LED_WARN_GPIO_OUT
 PC6.Locked=true
+PC6.PinState=GPIO_PIN_SET
 PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=LED_STAT2_GPIO_OUT
+PC7.GPIOParameters=PinState,GPIO_Label
+PC7.GPIO_Label=LED_STAT3_GPIO_OUT
 PC7.Locked=true
+PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=LED_WARN_GPIO_OUT
+PC8.GPIOParameters=PinState,GPIO_Label
+PC8.GPIO_Label=LED_STAT2_GPIO_OUT
 PC8.Locked=true
+PC8.PinState=GPIO_PIN_SET
 PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=LED_STAT3_GPIO_OUT
+PC9.GPIOParameters=PinState,GPIO_Label
+PC9.GPIO_Label=LED_STAT1_GPIO_OUT
 PC9.Locked=true
+PC9.PinState=GPIO_PIN_SET
 PC9.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -355,12 +363,14 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM2.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
-TIM2.Period=89999
-TIM2.Prescaler=9
+TIM2.Period=9
+TIM2.Prescaler=899
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=8999
 TIM6.Prescaler=9
+TIM7.IPParameters=Prescaler
+TIM7.Prescaler=899
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -369,4 +379,6 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
