--- a/BMS_LV.ioc
+++ b/BMS_LV.ioc
@@ -34,10 +34,15 @@ ADC2.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.CalculateBaudRate=937500
-CAN1.CalculateTimeBit=1066
-CAN1.CalculateTimeQuantum=355.55555555555554
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN1.ABOM=ENABLE
+CAN1.BS1=CAN_BS1_12TQ
+CAN1.BS2=CAN_BS2_2TQ
+CAN1.CalculateBaudRate=1000000
+CAN1.CalculateTimeBit=1000
+CAN1.CalculateTimeQuantum=66.66666666666666
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,ABOM,NART
+CAN1.NART=DISABLE
+CAN1.Prescaler=3
 Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC2.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC2.0.Instance=DMA2_Stream2
@@ -59,7 +64,8 @@ Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 Mcu.IP10=TIM6
 Mcu.IP11=TIM7
-Mcu.IP12=USART1
+Mcu.IP12=TIM10
+Mcu.IP13=USART1
 Mcu.IP2=CAN1
 Mcu.IP3=DMA
 Mcu.IP4=NVIC
@@ -68,7 +74,7 @@ Mcu.IP6=SPI1
 Mcu.IP7=SPI2
 Mcu.IP8=SYS
 Mcu.IP9=TIM2
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -102,13 +108,14 @@ Mcu.Pin33=VP_SYS_VS_Systick
 Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin36=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -116,6 +123,10 @@ MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -126,6 +137,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -143,7 +155,7 @@ PA10.GPIO_Label=T_VCP_RX_USART_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=SN65HVD23x_R_CAN_TX
+PA11.GPIO_Label=SN65HVD23x_R_CAN_RX
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN1_RX
 PA12.GPIOParameters=GPIO_Label
@@ -350,11 +362,12 @@ SH.ADCx_IN3.0=ADC2_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN4.0=ADC2_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CalculateBaudRate=2.8125 MBits/s
+SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI1.CalculateBaudRate=11.25 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase,CRCCalculation
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
@@ -363,19 +376,23 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM10.IPParameters=Prescaler
+TIM10.Prescaler=8999
 TIM2.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM2.Period=9
 TIM2.Prescaler=899
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=8999
-TIM6.Prescaler=9
+TIM6.Prescaler=899
 TIM7.IPParameters=Prescaler
 TIM7.Prescaler=8999
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
