--- a/openblt_f446re/openblt_f446re.ioc
+++ b/openblt_f446re/openblt_f446re.ioc
@@ -2,10 +2,13 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.CalculateBaudRate=937500
-CAN1.CalculateTimeBit=1066
-CAN1.CalculateTimeQuantum=355.55555555555554
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN1.BS1=CAN_BS1_12TQ
+CAN1.BS2=CAN_BS2_2TQ
+CAN1.CalculateBaudRate=1000000
+CAN1.CalculateTimeBit=1000
+CAN1.CalculateTimeQuantum=66.66666666666666
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN1.Prescaler=3
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -83,8 +86,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=openblt_mainboard.ioc
-ProjectManager.ProjectName=openblt_mainboard
+ProjectManager.ProjectFileName=openblt_f446re.ioc
+ProjectManager.ProjectName=openblt_f446re
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -105,38 +108,38 @@ RCC.FCLKCortexFreq_Value=180000000
 RCC.FMPI2C1Freq_Value=45000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=180000000
-RCC.HSE_VALUE=16000000
-RCC.I2S1Freq_Value=96000000
-RCC.I2S2Freq_Value=96000000
+RCC.HSE_VALUE=8000000
+RCC.I2S1Freq_Value=48000000
+RCC.I2S2Freq_Value=48000000
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 RCC.MCO2PinFreq_Value=180000000
 RCC.PLLCLKFreq_Value=180000000
-RCC.PLLI2SPCLKFreq_Value=96000000
-RCC.PLLI2SQCLKFreq_Value=96000000
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLI2SoutputFreq_Value=96000000
-RCC.PLLM=8
+RCC.PLLI2SPCLKFreq_Value=48000000
+RCC.PLLI2SQCLKFreq_Value=48000000
+RCC.PLLI2SRCLKFreq_Value=48000000
+RCC.PLLI2SoutputFreq_Value=48000000
+RCC.PLLM=4
 RCC.PLLN=180
 RCC.PLLQCLKFreq_Value=180000000
 RCC.PLLRCLKFreq_Value=180000000
-RCC.PLLSAIPCLKFreq_Value=96000000
-RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PLLSAIoutputFreq_Value=96000000
+RCC.PLLSAIPCLKFreq_Value=48000000
+RCC.PLLSAIQCLKFreq_Value=48000000
+RCC.PLLSAIoutputFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=180000000
-RCC.SAIAFreq_Value=96000000
-RCC.SAIBFreq_Value=96000000
+RCC.SAIAFreq_Value=48000000
+RCC.SAIBFreq_Value=48000000
 RCC.SDIOFreq_Value=180000000
 RCC.SPDIFRXFreq_Value=180000000
 RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USBFreq_Value=180000000
-RCC.VCOI2SInputFreq_Value=1000000
-RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOI2SInputFreq_Value=500000
+RCC.VCOI2SOutputFreq_Value=96000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=360000000
-RCC.VCOSAIInputFreq_Value=1000000
-RCC.VCOSAIOutputFreq_Value=192000000
+RCC.VCOSAIInputFreq_Value=500000
+RCC.VCOSAIOutputFreq_Value=96000000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
